20220913_CSS_Study_Done

--- a/PYTHON_STUDY/HTML/Ch10_속성-배경/index.html
+++ b/PYTHON_STUDY/HTML/Ch10_속성-배경/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <div>Hello world!</div>
+    <div class="container">
+        <div class="item">Apple</div>
+        <div class="item">Banana</div>
+
+    </div>
 </body>
 </html>
